<resources>
    <string name="app_name">Nivala</string>
    <string name="title_home">Home</string>
    <string name="title_selfiepoint">Selfie</string>
    <string name="title_give">Give</string>
    <string name="title_donate">Donate</string>
    <string name="title_chat">Chat</string>
    <string name="test_date">29-Apr-2022</string>
    <string name="test_locationName">Ulhasnagar</string>

    <!--    Menu - Home-->
    <string name="title_settings">Settings</string>
    <string name="title_language">Language</string>
    <string name="title_logout">Logout</string>

    <!--    Give section-->
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>