<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_take"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

<!--    <item-->
<!--        android:id="@+id/navigation_selfiepoint"-->
<!--        android:icon="@drawable/ic_selfiepoint_24"-->
<!--        android:title="@string/title_selfiepoint" />-->

    <item
        android:id="@+id/navigation_give"
        android:icon="@drawable/ic_give_24"
        android:title="@string/title_give" />

    <item
        android:id="@+id/navigation_donate"
        android:icon="@drawable/ic_donate_24"
        android:title="@string/title_donate" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_24"
        android:title="@string/title_chat" />


</menu>