<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_take">

    <fragment
        android:id="@+id/navigation_take"
        android:name="com.example.nivala.ui.take.TakeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_take" />

    <fragment
        android:id="@+id/navigation_selfiepoint"
        android:name="com.example.nivala.ui.selfie_point.SelfiePointFragment"
        android:label="@string/title_selfiepoint"
        tools:layout="@layout/fragment_selfiepoint" />

    <fragment
        android:id="@+id/navigation_give"
        android:name="com.example.nivala.ui.give.GiveFragment"
        android:label="@string/title_give"
        tools:layout="@layout/fragment_give" >
    </fragment>

    <fragment
        android:id="@+id/navigation_donate"
        android:name="com.example.nivala.ui.donate.DonateFragment"
        android:label="@string/title_donate"
        tools:layout="@layout/fragment_donate" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.nivala.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

</navigation>